bug fixes; remove scrollbar; report color; report newline br

--- a/src/components/report_page/Feed/index.scss
+++ b/src/components/report_page/Feed/index.scss
@@ -12,8 +12,8 @@
     &.right {
       justify-content: flex-end;
       .text {
-        background: #007aff;
-        color: #fff;
+        background: rgb(46, 170, 77);
+        // color: #fff;
       }
     }
     .text {
