--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -9,13 +9,19 @@ html {
 body {
   background: #eee;
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   font-family: 'EB Garamond', 'Helvetica', serif;
+  overflow: hidden;
 }
 
 button, select, textarea {
   font-family: 'EB Garamond', 'Helvetica', serif;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 ::selection {
